<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/homenav"
            android:id="@+id/nav_item1"
            android:title="@string/Home" />
        <item
            android:icon="@drawable/postjobnav"
            android:id="@+id/nav_item2"
            android:title="@string/Post_A_Job" />
        <item
            android:icon="@drawable/checkjobspostednav"
            android:id="@+id/nav_item3"
            android:title="@string/Check_Jobs_Posted_Status" />
        <item
            android:icon="@drawable/viewapplicantsnav"
            android:id="@+id/nav_item4"
            android:title="@string/View_Applicants" />

        <item
            android:icon="@drawable/viewacceptedapplicantsnav"
            android:id="@+id/nav_item5"
            android:title="@string/View_Accepted_Applicants" />
        <item
            android:id="@+id/nav_group2_item1"
            android:icon="@drawable/aboutnav"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/signoutnav"
            android:title="@string/SignOut" />

    </group>

</menu>
