<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_margin="10sp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Employer.ResetPassword.ResetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_resetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alegreya_sans"
                android:gravity="center"
                android:text="@string/Reset_Password"
                android:textColor="@color/Orange"
                android:textSize="20dp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider39"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tv_oldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/Old_Password"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/back_grey_round_corners"
                android:fontFamily="@font/alegreya_sans"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18dp" />


            <TextView
                android:id="@+id/tv_newPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/New_Password"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/back_grey_round_corners"
                android:fontFamily="@font/alegreya_sans"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_retypenewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/Re_Type_New_Password"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_new_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/back_grey_round_corners"
                android:fontFamily="@font/alegreya_sans"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_confirm2"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/back_filled_orange_22_5_dp_round"
                    android:fontFamily="@font/alegreya_sans"
                    android:text="@string/back"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/bt_confirm"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/back_filled_orange_22_5_dp_round"
                    android:fontFamily="@font/alegreya_sans"
                    android:text="@string/submit"
                    android:textSize="16dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>