<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@android:color/white"
    tools:context=".Employee.Login.EmployeeLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/logoCOntainingCard"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/rojgar_setu_logo_tricolour" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoCOntainingCard">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/alegreya_sans"
                    android:text="@string/JobSeeker"
                    android:textColor="@color/Orange"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans"
                    android:text="@string/Login"
                    android:textColor="@color/Orange"
                    android:textSize="22dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_genOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:translationX="0dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:contentPadding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lc_entermobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/alegreya_sans"
                        android:text="@string/EnterMobileNumber"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/et_activity_employee_login_phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="010dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="020dp"
                        android:background="@drawable/back_orange_round_corners"
                        android:fontFamily="@font/alegreya_sans"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20dp" />

                    <Button
                        android:id="@+id/bt_activity_employee_login_generateotp"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/back_filled_cherry_round"
                        android:fontFamily="@font/alegreya_sans"
                        android:text="@string/GenerateOTP"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="18dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_verifyOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:translationX="1600dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:contentPadding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lc_enterotp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya_sans"
                            android:text="@string/EnterOTP"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="16dp" />

                        <EditText
                            android:id="@+id/et_activity_employee_login_otp"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="2"
                            android:background="@drawable/back_orange_round_corners"
                            android:fontFamily="@font/alegreya_sans"
                            android:inputType="number"
                            android:padding="10dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="18dp" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/bt_activity_employee_login_submit"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/back_filled_cherry_round"
                        android:fontFamily="@font/alegreya_sans"
                        android:text="@string/continue_text"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_activity_employee_login_resendotp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:clickable="true"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="end"
                        android:text="@string/ResendOTP"
                        android:textColor="#0274be"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_loginAsEmployer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/loginAsEmployer"
                android:textColor="#2D87DE"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_genOTP" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>